1. 增加日志记录。 2. 增加Elastic客户端超时时间配置。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,9 @@ es:
   host: 120.79.176.54
   port: 9200
   scheme: http
+  socket_timeout: 60000
+  connect_timeout: 60000
+
+logging:
+  file:
+    path: ./logs/
