1. 增加ElasticSearch的用户名密码配置。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ es:
   scheme: http
   socket_timeout: 60000
   connect_timeout: 60000
+  username: elastic
+  password: elastic
 
 logging:
   file:
