1. 搜索功能加强：增加解析bool检索请求的解析。 2. 增加TF-IDF的计算示例。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,14 @@ es:
   host: 120.79.176.54
   port: 9200
   scheme: http
+  # 单位ms
   socket_timeout: 60000
+  # 单位ms
   connect_timeout: 60000
+  # 单位ms
+  search_timeout: 2000
+  # 返回文档的最低评分
+  min_score: 0.5
   username: elastic
   password: elastic
 
