1. 增加文本查询功能：当前只查询诊断名称，后续改成全字段。 2. 增加根据json配置文件创建默认索引功能。 3. 增加根据索引别名获取索引名称的功能。 4. 增加自动重建索引并将索引别名指向新建索引的功能。 5. 增加默认索引properties配置文件：index_properties.json。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,19 @@ es:
   search_timeout: 2000
   # 返回文档的最低评分
   min_score: 0.5
+  # ElasticSearch的用户名密码
   username: elastic
   password: elastic
+  # 搜索时使用的分词算法
   search_analyzer: ik_smart
+  # 原索引名称
+  index_name: original
+  # 索引别名，用于实际搜索时使用
+  alias_name: original_alias
+  # 重建索引时使用的索引名称
+  temp_index_name: original_dest
+  # 默认的索引属性配置文件
+  properties_json: /json/index_properties.json
 
 logging:
   file:
